--- a/Nodejs/Node_StaticData/package.json
+++ b/Nodejs/Node_StaticData/package.json
@@ -2,7 +2,8 @@
   "name": "Node_StaticData",
   "version": "0.0.1",
   "dependencies": {
-    "express":"latest"
+    "express":"latest",
+    "fs":"latest"
     
   }
 }
